Update cassandra-env.ps1 to work with java11